fixed about page bug. fixed mobile nav on iphone 5.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -393,13 +393,13 @@ nav {
     .mobile-home-link {
       color: black;
       position: absolute;
-      top: -31.5%;
+      top: -29.5%;
       right: 11%;
       font-size: 1.5em;
     }
     #closebtn{
       position:absolute;
-      top:-52.5%;
+      top:-50.5%;
       left: -5%;
       font-size:75px;
       color: black;
@@ -409,7 +409,7 @@ nav {
     .overlay-item{
       color:black;
       span{
-        font-size:1.2em;
+        font-size:1.1em;
       }
     }
 
@@ -499,7 +499,7 @@ nav {
           }
           .mobile-icons {
             display: inline-flex;
-            left: 80%;
+            left: 70%;
             position: relative;
           }
           #trans-btn, #about-btn {
